--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 body {
     background-color: antiquewhite;
     font-family: sans-serif;
+    color: black;
+}
+
+a {
+    color: blue;
 }
     
 body > h1,
-body > p {
+body > p,
+body > nav {
     padding: 0 1rem;
 }
 
