--- a/wtf/styles.css
+++ b/wtf/styles.css
@@ -6,7 +6,12 @@ body {
 nav {
     display: flex;
     justify-content: center;
-    gap: 2em;
+    gap: 1em 2em;
+    flex-wrap: wrap;
+
+    & a {
+        text-align: center;
+    }
 }
 
 article {
