--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,69 @@ nav {
     display: flex;
     gap: 2em;
 }
+
+view-stereogram {
+    display: block;
+
+    & fieldset {
+        display: grid;
+        max-width: 100%;
+        grid-template-rows: auto auto auto;
+        grid-template-columns: 1fr auto;
+        gap: 1em;
+
+        & label {
+            display: unset;
+        }
+
+        & canvas {
+            grid-column: 1 / 2;
+            grid-row: 1 / 3;
+            width: 100%;
+            border: 1px solid #ccc;
+        }
+
+        & label:has([type=checkbox]) {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+            justify-content: start;
+            display: flex;
+            flex-direction: row-reverse;
+
+            & span {
+                flex: 0 0 1em;
+            }
+        }
+
+        & label:has([orient=vertical]) {
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
+            display: flex;
+            flex-direction: row;
+            justify-content: end;
+            align-items: stretch;
+
+            & span {
+                flex: 0 0 1em;
+            }
+
+            & input {
+                flex: 1 0 1em;
+            }
+        }
+
+        & label:has([orient=horizontal]) {
+            grid-column: 1 / 2;
+            grid-row: 3 / 4;
+
+            & input {
+                width: 100%;
+            }
+        }
+
+        & label:has(a) {
+            grid-column: 2 / 3;
+            grid-row: 3 / 4;
+        }
+    }
+}
