--- a/view-stereogram.css
+++ b/view-stereogram.css
@@ -10,8 +10,8 @@ view-stereogram {
         display: grid;
         max-height: 100vh;
         max-width: 100%;
-        grid-template-rows: auto 1fr auto;
-        grid-template-columns: auto 1fr auto;
+        grid-template-rows: auto 1fr 2em;
+        grid-template-columns: auto 1fr 3em;
         gap: 1em;
 
         border: 0;
@@ -72,6 +72,8 @@ view-stereogram {
 
             & input {
                 flex: 1 0 1em;
+                appearance: slider-vertical;
+                width: 100%;
             }
         }
 
